[package]
name = "whenever"
version = "0.6.0-beta.1"
authors = []
description = "Rust extension module for whenever"
edition = "2021"
rust-version = "1.78"
license = "MIT"
readme = "README.md"
keywords = []
include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "pyproject.toml",
    "README.md",
    "src",
    "tests/*.py",
    "requirements/*.txt",
]

[lib]
name = "_whenever"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[[bench]]
name = "benchmarks"
path = "benchmarks/rust/main.rs"

[dependencies]
pyo3-ffi = { version = "^0.22.0", default-features = false, features = ["extension-module"]}
pyo3 = { version = "^0.22.0", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = { version = "^0.22.0" }
