[project]
name = "whenever"
authors = [
    {name = "Arie Bovenberg", email = "a.c.bovenberg@gmail.com"},
]
maintainers = [
    {name = "Arie Bovenberg", email = "a.c.bovenberg@gmail.com"},
]
readme = "README.md"
version = "0.10.0"
license = "MIT"
description = "Modern datetime library for Python"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = [
    "tzdata>=2020.1; sys_platform == 'win32'",
    "tzlocal>=4.0; sys_platform != 'darwin' and sys_platform != 'linux'",
]
keywords = [
    "datetime", "typesafe", "rust", "date", "time", "timezone", "utc",
    "zoneinfo", "tzdata", "tzdb"
]

[dependency-groups]
dev = [
    "black>=26,<27",
    "build",
    "flake8>=7.3.0,<8",
    "hypothesis>=6.152.7,<7",
    "isort>=8.0.1,<9",
    "mypy>=2.1.0,<2.2",
    "packaging>=26.2",
    "pyperf>=2.10,<3",
    "pytest-benchmark[histogram]>=5.2.3,<6",
    "pytest-cov>=7.1.0,<8",
    "pytest-order>=1.4.0,<2",
    "pytest>=9.0.3,<10",
    "setuptools-rust",
    "slotscheck>=0.20,<0.21",
    "time_machine>=3.2,<4; implementation_name == 'cpython'",
    "twine>=6.2.0",
]
docs = [
    "furo>=2025.12.19,<2026",
    "myst-parser>=5,<6",
    "sphinx-copybutton~=0.5",
    "sphinx-design>=0.7,<0.8",
    "sphinx>=9,<10",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.13"}


[project.urls]
Documentation = "https://whenever.readthedocs.io"
Repository = "https://github.com/ariebovenberg/whenever"
Issues = "https://github.com/ariebovenberg/whenever/issues"
Changelog = "https://github.com/ariebovenberg/whenever/blob/main/CHANGELOG.md"

[tool.black]
target-version = ['py310']
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
line_length = 79
combine_as_imports = true

[tool.uv]
default-groups = "all"

[tool.mypy]
warn_unused_ignores = true
strict = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
check_untyped_defs = true
disable_error_code = ["no-untyped-def"]

# ignore errors in extension module
[[tool.mypy.overrides]]
module = [
    "whenever._whenever",
    "_interpreters",
    "tzdata",
    "tzlocal",
    "pydantic_core",
    "pydantic",
]
ignore_missing_imports = true

[tool.setuptools.packages]
find = { where = ["pysrc"] }

# We essentially use three build systems:
# - We use maturin to build the binary distributions for different
#   platforms in CI, since it is very convenient for this purpose.
# - We use setuptools for source distributions and editable installs.
# - The custom backend below runs `build_rust --inplace` during editable
#   installs so `uv sync` can keep the Rust extension in the source tree.
# - To actually build the Rust extension with setuptools, we need
#   setuptools_rust.
[tool.maturin]
python-source = "pysrc"
module-name = "whenever._whenever"
bindings = "pyo3-ffi"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
# We need a custom backend to make editable installs build the Rust
# extension in place.
# Follows the approach from setuptools.pypa.io/en/latest/build_meta.html#dynamic-build-dependencies-and-other-build-meta-tweaks
build-backend = "backend"
backend-path = ["_custom_pybuild"]
