[project]
name = "whenever-benchmarks"
version = "0.1.0"
description = "Comparison benchmarks for whenever vs stdlib, arrow, and pendulum"
requires-python = ">=3.14"
dependencies = [
    # Use the latest stable whenever wheel from PyPI (optimized Rust build).
    # The dev version in this repo is installed in editable mode by uv, which
    # prevents using the optimized release wheel—hence the explicit PyPI pin.
    "whenever==0.9.5",
    "arrow>=1.3.0",
    "pendulum>=3.0.0",
    "python-dateutil>=2.9.0",
    "pyperf>=2.8.0",
    "matplotlib>=3.9.0",
]

[tool.uv]
# Prevent uv from treating this as part of the parent project's workspace.
package = false
